--- a/style.css
+++ b/style.css
@@ -1,70 +1,97 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-  }
-  body {
-    background-image: url("https://source.unsplash.com/1920x1080/?nature");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
 
-  #bookmark-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 20px;
-    position: absolute;
-    top: 50%;
-    display: none;
-    max-height: 80%;
-    max-width: 40%;
-    transform: translateY(-50%);
-    justify-content: center;
-    align-items: center;
-  }
+:root {
+  --black-transparent: #272727e0;
+  --black-transparent-hover: #272727f6;
+  --shadow: 0 0 10px rgb(110, 110, 110);
+  --shadow-hover: 0 0 10px rgb(151, 151, 151);
+}
 
+body {
+  height: 100vh;
+  width: 100vw;
+}
 
-  #bookmark-list.show {
-    display: flex;
-  }
+#content {
+  display: none;
+  width: 100%;
+  height: 100%;
 
-  #bookmark-list li {
-    background-color: #272727e0;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgb(110, 110, 110);
-    margin: 15px;
-    padding: 10px;
-    width: 150px;
-    height: 45px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    overflow: hidden;
-  }
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
-  #bookmark-list li:hover {
-    background-color: #272727f6;
-    box-shadow: 0 0 10px rgb(151, 151, 151);
-    transition: all ease-in-out 200ms;
-  }
+#content.show {
+  display: flex;
+}
 
-  #bookmark-list li a {
-    color: white;
-    text-decoration: none;
-    justify-content: center;
-    font-size: 16px;
-    text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    height: fit-content;
-  }
+#bookmark-list {
+  display: flex;
+  max-height: 80%;
+  max-width: 40%;
+  margin: 100px;
+
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+
+#bookmark-list li {
+  display: flex;
+  background-color: var(--black-transparent);
+  box-shadow: var(--shadow);
+  margin: 15px;
+  padding: 10px;
+  width: 150px;
+  height: 45px;
+  border-radius: 10px;
+
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: hidden;
+}
+
+#bookmark-list li:hover {
+  background-color: var(--black-transparent-hover);
+  box-shadow: var(--shadow-hover);
+  transition: all ease-in-out 200ms;
+}
+
+#bookmark-list li a {
+  color: white;
+  height: fit-content;
+  font-size: 16px;
+
+  text-decoration: none;
+  justify-content: center;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#clock {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: var(--black-transparent);
+  box-shadow: var(--shadow);
+  font-size: 32px;
+  padding: 10px;
+  width: 200px;
+  height: 45px;
+  border-radius: 10px;
+}
